refactor, review comments