@@ -13,6 +13,7 @@ import org.mariadb.jdbc.internal.logging.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import javax.annotation.Nullable;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.List;
@@ -22,12 +23,9 @@ import java.util.stream.Collectors;
 public class NrtmKeyPairService {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(NrtmKeyPairService.class);
-
     private final NrtmKeyConfigDao nrtmKeyConfigDao;
     private final DateTimeProvider dateTimeProvider;
     private final UpdateNrtmFileRepository updateNrtmFileRepository;
-
-
 
     @Autowired
     public NrtmKeyPairService(final NrtmKeyConfigDao nrtmKeyConfigDao, final DateTimeProvider dateTimeProvider, final UpdateNrtmFileRepository updateNrtmFileRepository) {
@@ -58,7 +56,8 @@ public class NrtmKeyPairService {
         return keyRecord;
     }
 
-    private NrtmKeyRecord getNextkeyPairRecord() {
+    @Nullable
+    public NrtmKeyRecord getNextkeyPair() {
         final NrtmKeyRecord currentActiveKey = nrtmKeyConfigDao.getActiveKeyPair();
 
         final List<NrtmKeyRecord> nextKey = nrtmKeyConfigDao.getAllKeyPair().stream().filter(keyRecord -> keyRecord.expires() > currentActiveKey.expires()).collect(Collectors.toList());
@@ -70,34 +69,35 @@ public class NrtmKeyPairService {
             throw new RuntimeException("More than two next key pair record found , this cannot happen");
         }
 
-        return nextKey.get(0);
+        return nextKey.getFirst();
     }
 
-    public NrtmKeyRecord generateOrRotateNextKey() {
+    public void generateOrRotateNextKey() {
         try {
             final NrtmKeyRecord currentActiveKey = nrtmKeyConfigDao.getActiveKeyPair();
             final LocalDateTime currentDateTime = dateTimeProvider.getCurrentDateTime();
 
             if(currentActiveKey.expires() > currentDateTime.plusDays(7).toEpochSecond(ZoneOffset.UTC)) {
-                return null;
+                LOGGER.info("Current key expiry is greater than 7 days");
+                return;
             }
 
-            final NrtmKeyRecord nextKey = getNextkeyPairRecord();
+            final NrtmKeyRecord nextKey = getNextkeyPair();
             if(nextKey == null) {
-              return generateKeyRecord(false);
+                LOGGER.info("Generating next Key pair");
+                generateKeyRecord(false);
+                return;
             }
 
             if(currentActiveKey.expires() <=  currentDateTime.toEpochSecond(ZoneOffset.UTC)) {
+                LOGGER.warn("NRTMv4 rotating the key");
+
                 //Needs to happen in a transaction
                 updateNrtmFileRepository.rotateKey(nextKey, currentActiveKey);
-                return null;
             }
-
-            return nextKey;
 
         } catch (final Exception e) {
             LOGGER.error("NRTMv4 key rotation failed", e);
-            return null;
         }
     }
 
